<resources>
    <string name="app_name">Optical shop App</string>
    <string name="background">Background</string>
    <string name="logo">logo</string>
    <string name="login">Log In</string>
    <string name="nickname">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="account">Do you have account?</string>
    <string name="Profile">Profile</string>
    <string name="cataloge">Catalogue</string>
    <string name="logout">Log Out</string>
    <string name="Settings">Settings</string>
    <string name="customers">Customer Manager</string>
    <string name="management">Catalogue Manager</string>
    <string name="Empty">Empty</string>
    <string name="i_d">L - R</string>
    <string name="miopia">Myopia</string>
    <string name="hipermetropia">Hyperopia</string>
    <string name="astigmatismo">Astigmatism</string>
    <string name="comentarios">Comments</string>
    <string name="escribir_texto">Write text</string>
    <string name="save">Save</string>
    <string name="title_activity_list">List</string>
    <string name="username_de_bbdd">Username</string>
    <string name="_0_5_0">0.5 – 0</string>
    <string name="_0_5_1">0.5 – 0</string>
    <string name="_1_1_5">1 – 1.5</string>
    <string name="alert_user">This user doesn\'t exist</string>
    <string name="alert_signup">Fields are empty</string>
    <string name="alert_pass">Wrong password</string>
    <string name="alert_phone">Phone error</string>
    <string name="language">Language</string>
    <string name="reference">Reference</string>
    <string name="not_allow">Not allow to use the camera</string>
    <string name="allow">Permissions accepted</string>
    <string name="cancel">Cancel</string>
    <string name="recover_pass">Recover password</string>
    <string name="send">Send</string>
    <string name="recover_des">Write your data to receive you password via Whatsapp</string>
    <string name="take_picture">Take picture</string>
    <string name="save_picture">Save picture</string>
    <string name="insert_ref">Insert a reference</string>

</resources>