<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        />
    <!-- android:src="@drawable/wallpaper" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#d8000000">
        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/cataloge"
            android:layout_marginBottom="50dp"
            android:paddingStart="5dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            android:src="@drawable/catalogo"
            />

        <EditText
            android:id="@+id/ref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/input"
            android:hint="@string/reference"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc" />
        <Button
            android:id="@+id/btn_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_corner"
            android:elevation="5dp"
            android:text="Take picture"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btn_save_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_corner"
            android:elevation="5dp"
            android:text="Save picture"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>






</RelativeLayout>